--- a/packages/new-tab/src/components/display-feed/display-feed.css
+++ b/packages/new-tab/src/components/display-feed/display-feed.css
@@ -1,9 +1,9 @@
-display-feed midwest-card {
-  --border: 1px solid var(--theme-base-2);
+display-feed .list midwest-card {
+  --border: transparent;
 }
 
-.dark-mode display-feed midwest-card {
-  --border: 1px solid var(--theme-base-9);
+.dark-mode .list display-feed midwest-card {
+  --border: transparent;
 }
 
 display-feed .loading {
