--- a/packages/helpers/src/components/code/code.css
+++ b/packages/helpers/src/components/code/code.css
@@ -45,8 +45,22 @@ midwest-code {
   letter-spacing: 0;
 }
 
+
+
 midwest-code .preview {
+  padding: 0;
+  position: relative;
+}
+
+midwest-code .preview .result {
+  padding: 1rem;
   overflow: auto;
+  resize: horizontal;
+  max-width: 100%;
+  min-width: 0;
+  width: 100%;
+  height: 100%;
+  border-right: 1rem solid var(--gray2);
 }
 
 midwest-code midwest-card {
@@ -104,6 +118,16 @@ midwest-code pre[class*=language-] {
   font-family: "Hack", monospace;
   font-size: 1rem;
   width: 0;
+}
+
+midwest-code .code {
+  position: relative;
+}
+
+midwest-code .code .copy {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 
 midwest-code code {
@@ -284,6 +308,10 @@ midwest-code[dark] footer {
 
 midwest-code[dark] midwest-card {
   --background: var(--black);
+}
+
+midwest-code[dark] .preview .result {
+  border-right: 1rem solid var(--gray10);
 }
 
 midwest-code[dark] code[class*=language-],
