--- a/packages/core/src/components/forms/toggle/toggle.css
+++ b/packages/core/src/components/forms/toggle/toggle.css
@@ -4,9 +4,13 @@ midwest-toggle {
   font-family: inherit;
   --background: var(--white);
   --color: var(--black);
-  --border-color: var(--gray2);
+  --border-color: var(--gray0);
   position: relative;
   z-index: 0;
+}
+
+midwest-toggle[dark] {
+  --color: var(--white);
 }
 
 midwest-toggle[inline-label] {
@@ -73,9 +77,9 @@ midwest-toggle[stacked] midwest-grid .grid {
 }
 
 midwest-toggle[dark] {
-  --background: var(--gray9);
+  --background: var(--gray10);
   --color: var(--white);
-  --border-color: var(--gray8);
+  --border-color: var(--gray9);
 }
 
 midwest-toggle .star {
