--- a/packages/core/src/css/automation.css
+++ b/packages/core/src/css/automation.css
@@ -329,6 +329,7 @@ p + midwest-button {
 
 .clip-text {
   -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
   background-clip: text;
 }
 
