--- a/packages/core/src/components/copy-wrap/copy-wrap.css
+++ b/packages/core/src/components/copy-wrap/copy-wrap.css
@@ -42,6 +42,7 @@
 }
 
 :host ::slotted(midwest-button) {
+  margin-top: 1rem;
   display: inline-block;
 }
 
@@ -51,11 +52,11 @@
 }
 
 :host ::slotted(*) {
-  margin-bottom: 1rem;
+  margin-bottom: 0.125em !important;
 }
 
 :host ::slotted(*:last-child) {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 :host([full]) ::slotted(*) {
