--- a/packages/core/src/components/layout/layout.css
+++ b/packages/core/src/components/layout/layout.css
@@ -26,6 +26,10 @@
   grid-template-columns: var(--layout);
 }
 
+:host([small]) .layout {
+  grid-template-columns: var(--layout-small, 1fr);
+}
+
 :host .layout > * {
   min-width: 0;
 }
@@ -103,52 +107,51 @@
   margin-top: calc(var(--layout-padding) / 2);
 }
 
-@media (min-width: 700px) {
-  :host {
-    --layout-width: calc(100% - (var(--layout-grid-gap) * 4));
-  }
+/* Responsive sizes */
+:host(:not([small])) {
+  --layout-width: calc(100% - (var(--layout-grid-gap) * 4));
+}
 
-  :host([type="one-third"]) {
-    --layout: 2fr 1fr;
-  }
+:host([type="one-third"]:not([small])) {
+  --layout: 2fr 1fr;
+}
 
-  :host([type="one-third-right"]) {
-    --layout: 1fr 2fr;
-  }
+:host([type="one-third-right"]:not([small])) {
+  --layout: 1fr 2fr;
+}
 
-  :host([type="sidebar-right"]) {
-    --layout: 3fr 1fr;
-  }
+:host([type="sidebar-right"]:not([small])) {
+  --layout: 3fr 1fr;
+}
 
-  :host([type="sidebar"]) {
-    --layout: 1fr 3fr;
-  }
+:host([type="sidebar"]:not([small])) {
+  --layout: 1fr 3fr;
+}
 
-  :host([type="locked-sidebar"]) {
-    --layout: 30rem 3fr;
-  }
+:host([type="locked-sidebar"]:not([small])) {
+  --layout: 30rem 3fr;
+}
 
-  :host([type="locked-sidebar-right"]) {
-    --layout: 30rem 3fr;
-  }
+:host([type="locked-sidebar-right"]:not([small])) {
+  --layout: 30rem 3fr;
+}
 
-  :host([type="half"]) {
-    --layout: 1fr 1fr;
-  }
+:host([type="half"]:not([small])) {
+  --layout: 1fr 1fr;
+}
 
-  :host([type="supporting-content"]) {
-    --layout: 6fr 4fr;
-  }
+:host([type="supporting-content"]:not([small])) {
+  --layout: 6fr 4fr;
+}
 
-  :host([type="supporting-content-right"]) {
-    --layout: 4fr 6fr;
-  }
+:host([type="supporting-content-right"]:not([small])) {
+  --layout: 4fr 6fr;
+}
 
-  :host([type="split-screen"]) {
-    --layout: 1fr 1fr;
-  }
+:host([type="split-screen"]:not([small])) {
+  --layout: 1fr 1fr;
+}
 
-  :host([type*="-right"]) ::slotted(aside) {
-    order: -1;
-  }
+:host([type*="-right"]:not([small])) ::slotted(aside) {
+  order: -1;
 }
