--- a/packages/helpers/src/components/code/code.css
+++ b/packages/helpers/src/components/code/code.css
@@ -5,47 +5,47 @@ midwest-code *::after {
   box-sizing: border-box;
 }
 
-midwest-code {
-  contain: content;
+midwest-code * {
+  scrollbar-width: thin;
+  scrollbar-color: var(--gray-3) var(--white);
 }
 
-midwest-code ::-webkit-scrollbar {
-  -webkit-appearance: none;
-  cursor: pointer;
-  width: 6px;
-  height: 6px;
+.dark-mode midwest-code * {
+  scrollbar-width: thin;
+  scrollbar-color: var(--gray-9) var(--black);
 }
 
-midwest-code ::-webkit-scrollbar-track {
-  background: transparent;
-  mix-blend-mode: hard-light;
-  background: var(--theme-0, var(--gray-0));
+midwest-code *::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
 }
 
-midwest-code ::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  display: block;
-  background: var(--theme-7, var(--gray-7));
+midwest-code *::-webkit-scrollbar-track { 
+  background: var(--white);
 }
 
-midwest-code ::-webkit-scrollbar-thumb:window-inactive {
-  background: transparent;
+midwest-code *::-webkit-scrollbar-thumb {
+  background-color: var(--gray-3);
+  border-radius: 6px;
+  border: 3px solid var(--white);
 }
 
-midwest-code ::-webkit-scrollbar-thumb:hover {
-  cursor: pointer;
-  background: var(--theme-5, var(--gray-5));
+.dark-mode midwest-code *::-webkit-scrollbar-track {
+  background: var(--black);
+}
+
+.dark-mode midwest-code *::-webkit-scrollbar-thumb {
+  background-color: var(--gray-9);
+  border-radius: 6px;
+  border: 3px solid var(--black);
 }
 
 midwest-code {
   display: block;
   width: 100%;
   overflow: auto;
-  background: var(--gray-0);
   letter-spacing: 0;
 }
-
-
 
 midwest-code .preview {
   padding: 0;
@@ -55,12 +55,12 @@ midwest-code .preview {
 midwest-code .preview .result {
   padding: 1rem;
   overflow: auto;
+  overflow: overlay;
   resize: horizontal;
   max-width: 100%;
   min-width: 0;
   width: 100%;
-  height: 100%;
-  border-right: 1rem solid var(--gray-2);
+  height: 40vh;
 }
 
 midwest-code midwest-card {
@@ -77,10 +77,12 @@ midwest-code header {
   justify-content: space-between;
 }
 
-midwest-code footer {
+midwest-code .code {
+  height: 40vh;
   width: 100%;
+  overflow: overlay;
   overflow: auto;
-  background: var(--gray-0);
+  background: rgba(0, 0, 0, 0.025);
 }
 
 midwest-code .hidden {
@@ -301,23 +303,18 @@ midwest-code pre.show-invisibles .token.space::before {
   content: "·";
 }
 
-midwest-code[dark],
-midwest-code[dark] footer {
-  background: var(--gray-9);
+midwest-code[dark] .code {
+  background: var(--gray-11);
 }
 
 midwest-code[dark] midwest-card {
   --background: var(--black);
 }
 
-midwest-code[dark] .preview .result {
-  border-right: 1rem solid var(--gray-10);
-}
-
 midwest-code[dark] code[class*=language-],
 midwest-code[dark] pre[class*=language-] {
   color: var(--gray-1);
-  text-shadow: 0 1px var(--gray-9);
+  text-shadow: 0 1px var(--gray-11);
 }
 
 midwest-code[dark] pre .token.comment,
