--- a/packages/core/src/components/avatar/avatar.css
+++ b/packages/core/src/components/avatar/avatar.css
@@ -132,7 +132,7 @@
   transform: translate(-50%, -50%);
   z-index: 1;
   border-radius: inherit;
-  background: var(--white);
+  background: transparent;
   width: 100%;
   height: 100%;
   color: transparent;
