--- a/packages/core/src/components/step/step.css
+++ b/packages/core/src/components/step/step.css
@@ -55,6 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: auto !important;
 }
 
 :host midwest-label::after {
