--- a/packages/core/src/components/step/step.css
+++ b/packages/core/src/components/step/step.css
@@ -32,7 +32,7 @@
   color: var(--theme-2);
 }
 
-:host button {
+:host .step-button {
   width: 100%;
   height: 100%;
   appearance: none;
@@ -43,19 +43,15 @@
   cursor: pointer;
 }
 
-:host ion-label {
+:host midwest-label {
   margin: 0;
   color: white;
   z-index: 1;
   position: relative;
-}
-
-:host midwest-label {
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto !important;
 }
 
 :host midwest-label::after {
