--- a/packages/core/src/components/step/step.css
+++ b/packages/core/src/components/step/step.css
@@ -33,14 +33,18 @@
 }
 
 :host .step-button {
-  width: 100%;
-  height: 100%;
   appearance: none;
-  padding: 0;
-  border: 0;
-  position: relative;
   background: var(--gray-6);
+  border: 0px;
   cursor: pointer;
+  height: 100%;
+  position: relative;
+  width: 100%;
+  padding: 0px 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 :host midwest-label {
