--- a/packages/media/src/components/image/image.css
+++ b/packages/media/src/components/image/image.css
@@ -97,6 +97,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: var(--object-position, center);
 }
 
 :host .placeholder {
